fixed issue with bootstrap overlapping

--- a/css/_buttons.scss
+++ b/css/_buttons.scss
@@ -1,4 +1,4 @@
-.btn {
+.social-share-btn {
   display: inline-block;
   padding: 6px 12px;
   margin-bottom: 0;
@@ -39,7 +39,7 @@
   }
 }
 
-.btn-default {
+.social-share-default {
   color: #333;
   background-color: #fff;
   border-color: #ccc;
